padded elements to prevent overlap

--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,19 @@
 .App {
   display: flex;
-  height: 100%;
   background: #102541;
 }
 
 .App__header {
-  margin: none;
+  margin: 5px;
   background:  #0b1f3a;
   width: 100%;
   height: 10vh;
   padding-left: 16px;
+  padding-bottom: 12px;
 }
 
 .App__main {
+  margin: 5px;
   height: 100%;
   width: 78vw;
 
